--- a/Pet-Shop/client/src/pages/AllProductsPage/AllProductsPage.module.css
+++ b/Pet-Shop/client/src/pages/AllProductsPage/AllProductsPage.module.css
@@ -1,10 +1,5 @@
-.title {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 64px;
-  font-weight: 700;
-  color: #282828;
-  margin-top: 40px;
-  margin-bottom: 40px;
+.section {
+  padding-top: 40px;
 }
 
 .productList {
@@ -29,8 +24,5 @@
 @media (max-width: 500px) {
   .productList {
     grid-template-columns: 1fr;
-  }
-  .title {
-    font-size: 40px;
   }
 }
