--- a/Pet-Shop/client/src/pages/Categories/Categories.module.css
+++ b/Pet-Shop/client/src/pages/Categories/Categories.module.css
@@ -1,35 +1,28 @@
 .section {
-  width: 100%;
-  max-width: 1360px;
-  margin: 0 auto;
-  padding: 0px 0px 40px 0px;
-  box-sizing: border-box;
-}
-
-.title {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 60px;
-  font-weight: 700;
-  color: #282828;
-  margin-bottom: 40px;
-  text-align: left;
+  padding-top: 40px;
 }
 
 .list {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 32px;
+  margin-bottom: 80px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
   .list {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 900px) {
   .list {
     grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
+  }
+}
+
+@media (max-width: 500px) {
+  .list {
+    grid-template-columns: 1fr;
   }
 }
